adjusted to the new config pattern - now have a global app config which isn't reloadable/changeable after boot